added custom component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,3 +19,7 @@
   <div class="body">Some content here...</div>
 
 </app-favorite>
+
+<app-zippy title="Shipping Address">New Delhi</app-zippy>
+
+<!-- <app-zippy title="Hello and Welcome">Hello</app-zippy> -->
