added template driven form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,4 +22,4 @@
 
 <app-zippy title="Shipping Address">New Delhi</app-zippy>
 
-<!-- <app-zippy title="Hello and Welcome">Hello</app-zippy> -->
+<app-contact-form></app-contact-form>
